# permissible

./: .gitignore  README.md  admin.py  filters.py  manage.py  perm_def.py  permissions.py  pyproject.toml  serializers.py  signals.py
.github/workflows/: build.yml  publish.yml
models/: __init__.py  base.py  metaclasses.py  perm_root.py  permissible_mixin.py  tests.py  util.py
permissible/: admin.py  filters.py  perm_def.py  permissions.py  policies.py  serializers.py  signals.py  views.py
permissible/admin/: __init__.py  default.py  forms.py  perm_domain.py
permissible/models/: __init__.py  hierarchical_perm_root.py  mixins.py  perm_root.py  permissible_mixin.py  policy_lookup.py  tests.py  unretrieved_model_mixin.py  utils.py
permissible/models/role_based/: base.py  base_perm_domain.py  core.py  domain_owned.py  hierarchical.py
permissible/models/utils/: __init__.py  clear.py  reset.py  update.py
permissible/perm_def/: __init__.py  defaults.py  model_resolver.py  perm_def.py
permissible/templates/admin/: permissible_changeform.html  user_permissible_changeform.html
permissible/tests/: tests.py
tests/: __init__.py  settings.py  test_bulk_update_permissions.py  test_composite_perm_def.py  test_debug_logging.py  test_hierarchical_perm_domain.py  test_perm_def.py  test_perm_domain.py  test_permissible_filter.py  test_permissible_mixin.py  test_permissions.py  tests_hierarchical_perm_root.py  tests_perm_root.py
tests/integration/: test_perm_domain_integration.py  test_permissible_filter_integration.py  test_permissible_perms_integration.py
utils/: signals.py
