[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "permissible"
version = "0.7.15"
description = "Extended, flexible and powerful object-level and rule-driven permissions for Django & Django REST framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2.13,<6",
  "djangorestframework>=3",
]

[project.optional-dependencies]
guardian = [
  "django-guardian==3.3.1",     # can be upgraded
  "djangorestframework-guardian"
]

[project.urls]
Homepage = "https://github.com/gaussian/permissible"
Issues = "https://github.com/gaussian/permissible/issues"
